--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
   <meta name="twitter:image" content="/logo.png" />
 
   <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="manifest" href="/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
